<resources>
    <string name="app_name">Terra ERP</string>

    <!-- COMMON -->
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="required_field">Required Field</string>
    <string name="information">Information</string>
    <string name="internet_not_available">Please check your internet connection and try again.</string>
    <string name="error">Error</string>
    <string name="common_error">There is an error. Please try again!!!…</string>
    <string name="no_data_available">No data available</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>

    <!-- LOGIN -->
    <string name="login">Login</string>
    <string name="origin">Origin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_failed">Login failed</string>
    <string name="logout_failed">Logout failed</string>
    <string name="select_origins">Select Origins</string>

    <!-- MAIN -->
    <string name="sync">Synchronization</string>
    <string name="data_backup">Data Backup</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="_0_kb_s">0 KB/s</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="logged_out_successfully">Logged Out Successfully</string>
    <string name="main_menu">Main Menu</string>
    <string name="finca">Farm</string>
    <string name="farm_management">Farm Management</string>
    <string name="warehouse">Warehouse</string>
    <string name="reception">Reception</string>
    <string name="dispatch">Dispatch</string>
    <string name="stock_movement">Inventory Movement</string>
    <string name="finance">Finance</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="carbons">Carbons</string>
    <string name="footprints_sustainability">Eco Footprints</string>
    <string name="sawmill">Sawmill</string>
    <string name="processed_movement">Processed Movement</string>
    <string name="database_exported_successfully">Backup generated successfully</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="sync_pending">Unsynced Data</string>
    <string name="unsynced_data_warning">You have unsynced transactions. Logging out now may cause data loss.</string>
    <string name="sync_now">Sync Now</string>
    <string name="logout_anyway">Logout Anyway</string>
    <string name="status">Status</string>
    <string name="opened">Opened</string>
    <string name="closed">Closed</string>
    <string name="pieces">Pieces</string>
    <string name="gross_volume">Gross CBM(m³)</string>
    <string name="net_volume">Net CBM (m³)</string>
    <string name="ica">ICA #</string>
    <string name="supplier">Supplier</string>
    <string name="date">Date</string>
    <string name="container">Container #</string>
    <string name="shipping_line">Shipping Line</string>
    <string name="avg_girth">Avg. Girth</string>
    <string name="wood">Wood</string>
    <string name="wood_type">Wood Type</string>
    <string name="measurement_system">Measurement System</string>
    <string name="enable_farm">Enable Farm</string>
    <string name="purchase_contract">Purchase Contract</string>
    <string name="truck_plate_number">Truck Plate Number</string>
    <string name="add_reception">Add Reception</string>
    <string name="edit_reception">Edit Reception</string>
    <string name="add_dispatch">Add Dispatch</string>
    <string name="edit_dispatch">Edit Dispatch</string>
    <string name="data_has_been_synced_successfully">Data has been synced successfully</string>
    <string name="data_sync_failed_please_try_again">Data sync failed. Please try again.</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="select_warehouse">Select warehouse</string>
    <string name="select_wood">Select wood</string>
    <string name="select_wood_type">Select wood type</string>
    <string name="select_measurement_system">Select measurement system</string>
    <string name="truck_driver_name">Truck Driver Name</string>
    <string name="select_purchase_contract">Select purchase contract</string>
    <string name="category">Category</string>
    <string name="select_shipping_line">Select shipping line</string>
    <string name="select_grith_classification">Select grith classification</string>
    <string name="data_added_successfully">Data has been added successfully</string>
    <string name="data_added_failed">Failed to add the data</string>
    <string name="data_updated_successfully">Data has been updated successfully</string>
    <string name="data_updated_failed">Failed to update the data</string>
    <string name="ica_exists">ICA already exists. Please verify and try again.</string>
    <string name="container_exists">Container already exists. Please verify and try again.</string>
    <string name="measurement">Measurement</string>
    <string name="available_containers">Available Containers</string>
    <string name="length">Length</string>
    <string name="circ">Girth</string>
    <string name="input_measurements">Input Measurements</string>
    <string name="measurement_data">Measurement Data</string>
    <string name="clear">Clear</string>
    <string name="container_select_error">Please select a container to add the pieces</string>
    <string name="pieces_has_been_added_successfully">Pieces has been added successfully</string>
    <string name="colon">&#160;:&#160;</string>
    <string name="reception_detail">Reception Detail</string>
    <string name="farm_contract_details"><u>Farm Contract Details</u></string>
    <string name="contract_code">Contract Code</string>
    <string name="description">Description</string>
    <string name="length_must_be_greater_than_100">Length must be greater than 100</string>
    <string name="sync_already_in_progress">Sync already in progress…</string>
    <string name="reception_subtitle">%1$s / %2$s</string>
    <string name="reception_data">Reception Data</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="data_deleted">Data has been deleted successfully</string>
    <string name="data_deleted_failed">Failed to delete the data</string>
    <string name="dispatch_data">Dispatch Data</string>
    <string name="thickness">Thickness</string>
    <string name="width">Width</string>
    <string name="volume_pie">Volume Pie</string>
    <string name="cft">CFT</string>
    <string name="endpoint">Endpoint</string>
    <string name="duration">Duration</string>
    <string name="type">Type</string>
    <string name="time">Time</string>
    <string name="flags">Flags</string>
    <string name="app_status">App Status</string>
    <string name="stack_trace">Stack trace:</string>
    <string name="error_message">Error message:</string>
    <string name="show_less">Show Less…</string>
    <string name="show_more">Show More…</string>
    <string name="request">Request</string>
    <string name="response">Response</string>
    <string name="all">All</string>
    <string name="api">API</string>
    <string name="network">Network</string>
    <string name="crash">Crash</string>
    <string name="database">Database</string>
    <string name="select">Select</string>
    <string name="export_logs">Export Logs</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="share_log">Share Log</string>
    <string name="clear_logs_confirmation">Are you sure you want to clear all logs?</string>
    <string name="clear_log_confirmation">Are you sure you want to clear all log?</string>
    <string name="logs_cleared">" logs cleared"</string>
    <string name="delete_log">Delete Log</string>
    <string name="deleted_log">Log has been deleted successfully</string>
    <string name="generate">Generate</string>
    <string name="date_format">yyyyMMdd_HHmmssa</string>
    <string name="share_backup">Share Backup</string>
    <string name="backup_deleted">Backup deleted successfully</string>
    <string name="failed_to_delete_backup">Failed to delete backup</string>
    <string name="delete_backup">Delete backup</string>
    <string name="delete_backup_confirmation">Are you sure you want to delete the backup?</string>
    <string name="no_images_available">No photos available</string>
    <string name="container_images">Container Photos</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="select_source">Select Source</string>

    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="camera_permission_required">Camera Permission Required</string>
    <string name="camera_access_is_required_to_take_photos_for_expense_attachments">Camera access is required to take photos for expense attachments.</string>
    <string name="allow">Allow</string>
    <string name="permission_required">Permission Required</string>
    <string name="camera_permission_is_disabled_please_enable_it_from_app_settings">Camera permission is disabled. Please enable it from App Settings.</string>
    <string name="open_settings">Open Settings</string>
    <string name="image_added">Photo added successfully</string>
    <string name="photo_deleted">Photo deleted successfully</string>
    <string name="shorts_validate">Shorts length must be less than 290</string>
    <string name="semi_validate">Semi length must be between 300 and 590</string>
    <string name="longs_validate">Longs length must be greater than 590</string>
    <string name="invalid_length">Invalid length</string>
    <string name="close">Close</string>
    <string name="close_confirmation">Are you sure you want to close?</string>
    <string name="open_confirmation">Are you sure you want to open?</string>
    <string name="data_closed_successfully">Reception has been closed successfully</string>
    <string name="data_opened_successfully">Reception has been opened successfully</string>
    <string name="open">Open</string>
    <string name="sync_completed">Sync Completed</string>
    <string name="sync_failed">Sync Failed</string>
    <string name="failed_to_sync">Failed to sync</string>
    <string name="container_photos_sync_failed">Container photos sync failed</string>
    <string name="data_sync_failed">Data sync failed</string>
    <string name="closed_date">Closed Date</string>
    <string name="data_sync_successfully">Data synced successfully</string>
    <string name="sync_reminder">Sync Reminder</string>
    <string name="sync_overdue_please_sync_your_pending_data_immediately">Sync overdue. Please sync your pending data immediately.</string>
    <string name="your_data_has_not_been_synced_for_several_hours">Your data has not been synced for several hours.</string>
    <string name="you_have_pending_data_waiting_for_sync">You have pending data waiting for sync.</string>
</resources>