<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_12"
    android:layout_marginTop="@dimen/margin_12"
    android:layout_marginEnd="@dimen/margin_12"
    android:layout_marginBottom="@dimen/margin_12"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="@dimen/corner_radius_20"
    app:cardElevation="@dimen/corner_elevation_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section: Invoice & Supplier -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_12">

            <!-- Invoice Column -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:letterSpacing="0.05"
                    android:text="@string/container"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/text_12" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_invoice_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:fontFamily="@font/exo2_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>

            <!-- Supplier Column -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:gravity="end"
                    android:letterSpacing="0.05"
                    android:text="@string/shipping_line"
                    android:textAllCaps="true"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/text_12" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:fontFamily="@font/exo2_bold"
                    android:gravity="end"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_14" />

            </LinearLayout>
        </LinearLayout>

        <!-- Details Section: 2x2 Grid -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:padding="@dimen/padding_10"
            android:useDefaultMargins="true">

            <!-- Date -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/margin_4"
                android:gravity="start"
                android:layout_gravity="fill_horizontal"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:text="@string/pieces"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/text_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:fontFamily="@font/exo2_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_16" />

            </LinearLayout>

            <!-- Pieces -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal|center_vertical"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:text="@string/gross_volume"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/text_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:fontFamily="@font/exo2_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <!-- Gross Volume -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginEnd="@dimen/margin_4"
                android:gravity="end"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:text="@string/net_volume"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/text_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:fontFamily="@font/exo2_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <!-- Date -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:text="@string/date"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/text_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:fontFamily="@font/exo2_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <!-- Average Girth / CFT -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:gravity="center"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/exo2_medium"
                    android:text="@string/avg_girth"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="@dimen/text_14" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_2"
                    android:fontFamily="@font/exo2_bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_16" />
            </LinearLayout>

            <!-- Action Buttons -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:gravity="end"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/margin_6"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="horizontal">

                <!-- Edit Button -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnEditItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_edit"
                    app:tint="@color/darkGreen" />

                <!-- Delete Button -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btnDeleteItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorRed" />
            </LinearLayout>
        </GridLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>